--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header>
   <nav>
-    <ul>
+    <ul class="container">
       <li><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></li>
       {{ range .Site.Menus.main }}
         <li>
