--- a/assets/css/main.tpl.css
+++ b/assets/css/main.tpl.css
@@ -1,8 +1,33 @@
-nav ul {
-  list-style-type: none;
+/* Base Styles */
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  border-bottom: 1px solid black;
+}
+
+main {
+  margin: auto;
+  max-width: 42rem;
+  padding: 1em;
+}
+
+h1 {
+  margin-top: 0;
 }
 
 .container {
   display: flex;
-  justify-content: flex-end;
+}
+
+nav .container {
+  justify-content: space-around;
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
 }
