--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
-  
-{{- partial "head.html" . -}}
+  <head>
+    {{- partial "head.html" . -}}
+  </head>
 
 <body>
-  {{- partial "header.html" . -}}
-  {{- block "main" . }}{{- end }}
-  {{- partial "footer.html" . -}}
+  <header>
+    {{- partial "header.html" . -}}
+  </header>
+  <main>
+    {{- block "main" . }}{{- end }}
+  </main>
+  <footer>
+    {{- partial "footer.html" . -}}
+  </footer>
 </body>
 
 </html>
