--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,12 +1,8 @@
-<header>
-  <nav>
-    <ul class="container">
-      <li><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></li>
-      {{ range .Site.Menus.main }}
-        <li>
-          <a href="{{ relURL .URL }}">{{ .Name }}</a>
-        </li>
-      {{ end }}
-    </ul>
-  </nav>
-</header>
+<nav>
+  <ul class="container">
+    <li class="site-title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></li>
+    {{ range .Site.Menus.main }}
+      <li><a href="{{ relURL .URL }}">{{ .Name }}</a></li>
+    {{ end }}
+  </ul>
+</nav>
