--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,7 +9,9 @@
     {{- partial "header.html" . -}}
   </header>
   <main>
-    {{- block "main" . }}{{- end }}
+    <div class="wrapper">
+      {{- block "main" . }}{{- end }}
+    </div>
   </main>
   <footer>
     {{- partial "footer.html" . -}}
