--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="wrapper">
   <ul class="container">
     <li class="site-title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></li>
     {{ range .Site.Menus.main }}
