better use of classes

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,8 +5,10 @@
   </head>
 
 <body>
-  <header>
-    {{- partial "header.html" . -}}
+  <header class="site-header">
+    <div class="wrapper">
+      {{- partial "header.html" . -}}
+    </div>
   </header>
   <main>
     <div class="wrapper">
