--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <article>
-    <heading><h2>{{ .Title }}</h2></heading>
+    <h1>{{ .Title }}</h1>
     {{ .Content }}
   </article>
   {{- partial "commento.html" . -}}
