--- a/assets/css/main.tpl.css
+++ b/assets/css/main.tpl.css
@@ -1,45 +1,64 @@
-/* Base Styles */
-
-body {
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-  min-height: 100vh;
-  padding: 0;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+html {
+  font-size: 62.5%;
 }
 
-header {
-  border-bottom: 1px solid black;
+body {
+  min-height: 100vh;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 2rem;
+  margin: 0;
+  line-height: 3rem;
 }
 
 main {
-  margin: auto;
-  padding: 1em;
+  padding: 0 1rem;
 }
 
 h1 {
-  margin-top: 0;
+  font-size: 4.8rem;
+  margin: 3.5rem 0;
+  line-height: 4.5rem;
 }
 
-a {
-  display: block;
+h2 {
+  font-size: 4rem;
 }
 
-.wrapper {
-  margin: auto;
-  max-width: 42rem;
+.primary-nav {
+  list-style-type: none;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
 }
 
-.container {
+  .primary-nav__link,
+  .primary-nav__link:visited {
+    color: white;
+    text-decoration: none;
+  }
+
+.site-header {
+  background-color: {{ site.Params.color }};
+  padding: 1rem;
+}
+
+.flex-container {
   display: flex;
 }
 
-nav .container {
-  justify-content: space-around;
+@media screen and (max-width: 400px) {
+  .primary-nav.flex-container {
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .primary-nav__title {
+    min-width: 100%;
+    padding-bottom: .5em;
+  }
 }
 
-nav ul {
-  list-style-type: none;
-  padding: 0;
+.wrapper {
+  max-width: 38em;
+  margin: auto;
 }
