--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,8 @@
-<nav class="wrapper">
-  <ul class="container">
-    <li class="site-title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></li>
+<nav>
+  <ul class="primary-nav flex-container">
+    <li class="primary-nav__item primary-nav__title"><a class="primary-nav__link" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></li>
     {{ range .Site.Menus.main }}
-      <li><a href="{{ relURL .URL }}">{{ .Name }}</a></li>
+      <li class="primary-nav__item"><a class="primary-nav__link" href="{{ relURL .URL }}">{{ .Name }}</a></li>
     {{ end }}
   </ul>
 </nav>
