--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -3,7 +3,7 @@
   <h1>Recent Posts</h1>
   <ul>
     {{ range where site.RegularPages "Type" "in" site.Params.mainSections }}
-      <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+      <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
     {{ end}}
   </ul>
 {{ end }}
