--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,7 +11,7 @@
 <meta name="theme-color" content="#ffffff">
 {{- $cssTemplate := resources.Get "css/main.tpl.css" -}}
 {{- $style := $cssTemplate | resources.ExecuteAsTemplate "css/main.css" . | resources.Minify | resources.Fingerprint -}}
-<link rel="stylesheet" href="{{ $style.Permalink }}">
+<link rel="stylesheet" href="{{ $style.RelPermalink }}">
 
 {{ if not .Site.IsServer }}
 <!-- tracking code here?? -->
