--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,9 +3,9 @@
   {{ range .Pages.GroupByPublishDate "2006" }}
     <h2>{{ .Key }}</h2>
     <ul>
-      {{ range .Pages.Reverse }}
+      {{ range .Pages }}
         <li>
-          {{ .PublishDate.Format "Jan 2" }} – <a href="{{ .RelPermalink }}">{{- .Title -}}</a>
+          {{ .PublishDate.Format "Jan 2" }} - <a href="{{ .RelPermalink }}">{{- .Title -}}</a>
         </li>
       {{ end }}
     </ul>
