--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,5 +14,5 @@
 <link rel="stylesheet" href="{{ $style.Permalink }}">
 
 {{ if not .Site.IsServer }}
-<!-- tracking code here?? -->
+<!-- Any code to include you don't want to run while testing, such as analytics. -->
 {{ end }}
