--- a/assets/css/main.tpl.css
+++ b/assets/css/main.tpl.css
@@ -8,21 +8,33 @@ body {
   font-size: 2rem;
   margin: 0;
   line-height: 3rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
+  grid-template-areas:
+    'header'
+    'main'
+    'footer';
 }
 
 main {
-  padding: 0 1rem;
+  padding: 1rem;
+  grid-area: main;
+  min-height: 100%;
 }
 
 h1 {
   font-size: 4.8rem;
-  margin: 3.5rem 0;
+  margin: 1rem 0 0 0;
+  padding: 0;
   line-height: 4.5rem;
 }
 
 h2 {
   font-size: 4rem;
 }
+
+.article-header {}
 
 .primary-nav {
   list-style-type: none;
@@ -32,26 +44,109 @@ h2 {
   margin: 0;
 }
 
-  .primary-nav__link,
-  .primary-nav__link:visited {
-    color: white;
-    text-decoration: none;
-  }
+.primary-nav__link,
+.primary-nav__link:visited {
+  color: white;
+  text-decoration: none;
+}
 
-  .primary-nav__title {
-    margin-right: auto;
-  }
+.primary-nav__title {
+  margin-right: auto;
+}
 
 .site-header {
   background-color: {{ site.Params.color }};
   padding: 1rem;
+  grid-area: header;
 }
 
 .flex-container {
   display: flex;
 }
 
+.site-footer {
+  font-size: 1.5rem;
+  line-height: 2.25rem;
+  grid-area: footer;
+  min-width: 100%;
+}
+
+.site-footer__content {
+  padding: 1rem;
+  text-align: center;
+}
+
+.site-footer__social {
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.wrapper {
+  max-width: 38em;
+  margin: auto;
+}
+
+.contact-form {
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.contact-form__comment {
+  resize: vertical;
+}
+
+.contact-form__input {
+  padding: .75rem;
+}
+
+button,
+input,
+select,
+textarea {
+  width: 100%;
+  font-family: inherit;
+  font-size: 100%;
+  box-sizing: border-box;
+  border-radius: 5px;
+  border-width: 1px;
+}
+
+.visually-hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+.post-comment-form {
+  border-width: 1px;
+  border-style: solid;
+  border-color: lightgray;
+  border-radius: 5px;
+  padding: 1rem;
+  background-color: whitesmoke;
+}
+
+.post-comment-form>p {
+  padding: 0 0 1rem 0;
+  margin: 0;
+}
+
+.http-404 {
+  text-align: center;
+}
+
 @media screen and (max-width: 400px) {
+
+  .primary-nav {
+    gap: .5rem;
+  }
+
   .primary-nav.flex-container {
     flex-wrap: wrap;
     justify-content: space-around;
@@ -59,11 +154,7 @@ h2 {
 
   .primary-nav__title {
     min-width: 100%;
-    padding-bottom: .5em;
+    justify-content: center;
   }
-}
 
-.wrapper {
-  max-width: 38em;
-  margin: auto;
 }
