--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,7 @@
 <meta charset="utf-8">
 <title>{{ .Title }}</title>
-<meta name="description" content="{{if .IsHome}}{{ $.Site.Params.description }}{{else}}{{.Description}}{{end}}">
+<meta name="description" content="{{if .IsHome}}{{ $.Site.Params.meta.description }}{{else}}{{.Description}}{{end}}">
+<meta name="keywords" content="{{ .Site.Params.meta.keywords }}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -13,6 +14,6 @@
 {{- $style := $cssTemplate | resources.ExecuteAsTemplate "css/main.css" . | resources.Minify | resources.Fingerprint -}}
 <link rel="stylesheet" href="{{ $style.RelPermalink }}">
 
-{{ if not .Site.IsServer }}
+{{ if not hugo.IsServer }}
 <!-- Any code to include you don't want to run while testing, such as analytics. -->
 {{ end }}
